# android-build-eval

./: .gitignore  README.md
apps_eats_app_root_apk/module1/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1/src/main/: AndroidManifest.xml
apps_eats_app_root_apk/module1/src/main/java/module1packageKt0/: Foo0.kt  Foo1.kt  Foo10.kt  Foo2.kt  Foo3.kt  Foo4.kt  Foo5.kt  Foo6.kt  Foo7.kt  Foo8.kt  Foo9.kt
apps_eats_app_root_apk/module1/src/main/res/layout/: module1activity_main0.xml
apps_eats_app_root_apk/module1/src/main/res/values/: strings.xml
apps_eats_app_root_apk/module1002/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1002/src/main/java/module1002packageJava0/: Foo0.java  Foo1.java  Foo2.java
apps_eats_app_root_apk/module1005/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1005/src/main/java/module1005packageJava0/: Foo0.java  Foo10.java  Foo11.java  Foo12.java  Foo13.java  Foo14.java  Foo15.java  Foo16.java  Foo17.java  Foo18.java  Foo19.java  Foo20.java  Foo21.java  Foo22.java  Foo23.java  Foo24.java  Foo25.java  Foo26.java  Foo27.java  Foo28.java  Foo29.java  Foo30.java  Foo31.java  Foo32.java  Foo33.java  Foo34.java  Foo35.java  Foo36.java  Foo37.java  Foo38.java  Foo39.java  Foo4.java  Foo40.java  Foo41.java  Foo42.java  Foo43.java  Foo44.java  Foo45.java  Foo46.java  Foo47.java  (+6 more)
apps_eats_app_root_apk/module1005/src/main/res/layout/: module1005activity_main0.xml
apps_eats_app_root_apk/module1005/src/main/res/values/: strings.xml
apps_eats_app_root_apk/module1010/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1010/src/main/java/module1010packageKt0/: Foo0.kt  Foo1.kt  Foo10.kt  Foo11.kt  Foo12.kt  Foo13.kt  Foo14.kt  Foo15.kt  Foo16.kt  Foo17.kt  Foo18.kt  Foo19.kt  Foo2.kt  Foo20.kt  Foo21.kt  Foo22.kt  Foo23.kt  Foo24.kt  Foo25.kt  Foo26.kt  Foo27.kt  Foo28.kt  Foo3.kt  Foo4.kt  Foo5.kt  Foo6.kt  Foo7.kt  Foo8.kt  Foo9.kt
apps_eats_app_root_apk/module1013/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1013/src/main/java/module1013packageJava0/: Foo0.java  Foo1.java  Foo10.java  Foo11.java  Foo12.java  Foo13.java  Foo14.java  Foo15.java  Foo16.java  Foo17.java  Foo18.java  Foo19.java  Foo2.java  Foo20.java  Foo21.java  Foo22.java  Foo23.java  Foo24.java  Foo25.java  Foo26.java  Foo27.java  Foo28.java  Foo29.java  Foo3.java  Foo30.java  Foo31.java  Foo32.java  Foo33.java  Foo34.java  Foo35.java  Foo36.java  Foo37.java  Foo38.java  Foo39.java  Foo4.java  Foo40.java  Foo41.java  Foo42.java  Foo43.java  Foo44.java  (+11 more)
apps_eats_app_root_apk/module1013/src/main/res/layout/: module1013activity_main0.xml  module1013activity_main1.xml  module1013activity_main2.xml  module1013activity_main3.xml
apps_eats_app_root_apk/module1013/src/main/res/values/: strings.xml
apps_eats_app_root_apk/module1022/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1022/src/main/java/module1022packageKt0/: Foo0.kt  Foo1.kt  Foo10.kt  Foo11.kt  Foo12.kt  Foo13.kt  Foo14.kt  Foo15.kt  Foo16.kt  Foo17.kt  Foo18.kt  Foo19.kt  Foo2.kt  Foo20.kt  Foo21.kt  Foo22.kt  Foo23.kt  Foo24.kt  Foo25.kt  Foo26.kt  Foo27.kt  Foo28.kt  Foo29.kt  Foo3.kt  Foo30.kt  Foo31.kt  Foo32.kt  Foo33.kt  Foo34.kt  Foo35.kt  Foo36.kt  Foo37.kt  Foo38.kt  Foo39.kt  Foo4.kt  Foo40.kt  Foo41.kt  Foo42.kt  Foo43.kt  Foo44.kt  (+41 more)
apps_eats_app_root_apk/module1025/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1025/src/main/: AndroidManifest.xml
apps_eats_app_root_apk/module1025/src/main/java/module1025packageKt0/: Foo0.kt  Foo1.kt  Foo10.kt  Foo11.kt  Foo12.kt  Foo13.kt  Foo14.kt  Foo15.kt  Foo16.kt  Foo17.kt  Foo18.kt  Foo19.kt  Foo2.kt  Foo20.kt  Foo21.kt  Foo22.kt  Foo23.kt  Foo24.kt  Foo25.kt  Foo26.kt  Foo27.kt  Foo28.kt  Foo29.kt  Foo3.kt  Foo30.kt  Foo31.kt  Foo32.kt  Foo33.kt  Foo34.kt  Foo4.kt  Foo5.kt  Foo6.kt  Foo7.kt  (+2 more)
apps_eats_app_root_apk/module1027/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1028/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1029/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1029/src/main/: AndroidManifest.xml
apps_eats_app_root_apk/module1030/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1030/src/main/: AndroidManifest.xml
apps_eats_app_root_apk/module1031/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1032/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1035/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1035/src/main/: AndroidManifest.xml
apps_eats_app_root_apk/module104/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1043/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1049/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1049/src/main/: AndroidManifest.xml
apps_eats_app_root_apk/module1055/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1065/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1066/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1066/src/main/: AndroidManifest.xml
apps_eats_app_root_apk/module1076/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1078/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1078/src/main/: AndroidManifest.xml
apps_eats_app_root_apk/module1080/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1081/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1087/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1087/src/main/: AndroidManifest.xml
apps_eats_app_root_apk/module1089/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1091/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1091/src/main/: AndroidManifest.xml
apps_eats_app_root_apk/module1092/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1095/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1097/: BUCK  BUILD.bazel  build.gradle
apps_eats_app_root_apk/module1097/src/main/: AndroidManifest.xml
(+284408 files in other folders)
