load("@gmaven_rules//:defs.bzl", "gmaven_artifact")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
kt_android_library(
    name = "module1",
    srcs = glob(["src/main/java/**/*.java", "src/main/java/**/*.kt"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1",
    visibility = ["//visibility:public"],
    deps = [
        "//module183",
        "@maven//:androidx_annotation_annotation_experimental",
        "//module741",
        "//module414",
        "//module30",
        "//module862",
        "//module1015",
        "//module324",
        "//module113",
        "//module888",
        "//module106",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module1073",
        "//module121",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module319",
        "//module385",
        "//module957",
        "//module298",
        "//module448",
        "//module468",
        "@maven//:javax_inject_javax_inject",
        "//module961",
        "//module547",
        "//module296",
        "@maven//:javax_annotation_javax_annotation_api",
        "//module430",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//leafModuleMax",
        "//module339",
        "//module424",
        "//module91",
        "//module472",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)