load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1002",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1002",
    visibility = ["//visibility:public"],
    deps = [
        "//module467",
        "//module468",
        "//module319",
        "//module547",
        "//module835",
        "//module414",
        "@maven//:androidx_multidex_multidex",
        "//module1085",
        "//module888",
        "//module87",
        "//module339",
        "//module1073",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//leafModuleMax",
        "//module862",
        "//module524",
        "//module385",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)