load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1005",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1005",
    visibility = ["//visibility:public"],
    deps = [
        "//module1003",
        "//module835",
        "//module69",
        "//module468",
        "//module765",
        "//module959",
        "//module344",
        "//module150",
        "//module448",
        "//module414",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module547",
        "//module1116",
        "//module692",
        "//module642",
        "//module740",
        "//module808",
        "//module385",
        "//module661",
        "//module130",
        "//module1015",
        "//module1063",
        "//module1111",
        "//module1073",
        "//module465",
        "//module771",
        "//module42",
        "//module1075",
        "//module741",
        "//module298",
        "//module742",
        "//module430",
        "//module990",
        "//module319",
        "//module296",
        "//module1082",
        "//leafModuleMax",
        "//module484",
        "//module463",
        "//module1085",
        "//module862",
        "//module527",
        "//module446",
        "//module324",
        "//module173",
        "//module961",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module30",
        "//module106",
        "//module133",
        "//module1207",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)