load("@gmaven_rules//:defs.bzl", "gmaven_artifact")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
kt_android_library(
    name = "module1010",
    srcs = glob(["src/main/java/**/*.java", "src/main/java/**/*.kt"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1010",
    visibility = ["//visibility:public"],
    deps = [
        "//module424",
        "//module468",
        "//module547",
        "//module121",
        "@maven//:androidx_annotation_annotation_experimental",
        "//module862",
        "//module91",
        "//module130",
        "//module324",
        "//module159",
        "//module183",
        "//module1015",
        "//module961",
        "//module604",
        "//module888",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module40",
        "//module113",
        "//module765",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module319",
        "//module430",
        "//leafModuleMax",
        "//module385",
        "//module953",
        "@maven//:javax_inject_javax_inject",
        "//module774",
        "@maven//:javax_annotation_javax_annotation_api",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module843",
        "//module298",
        "//module463",
        "//module106",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)