load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1013",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1013",
    visibility = ["//visibility:public"],
    deps = [
        "//module30",
        "//leafModuleMax",
        "//module319",
        "//module1208",
        "//module430",
        "//module741",
        "//module133",
        "//module547",
        "//module270",
        "//module110",
        "//module62",
        "//module113",
        "//module385",
        "//module106",
        "//module175",
        "//module888",
        "//module995",
        "//module213",
        "//module693",
        "//module786",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "@maven//:com_jakewharton_rxrelay2_rxrelay",
        "//module835",
        "//module472",
        "//module862",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module897",
        "//module531",
        "//module298",
        "//module1073",
        "//module1197",
        "//module1003",
        "//module388",
        "//module414",
        "//module409",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module345",
        "//module552",
        "//module524",
        "//module1085",
        "//module42",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)