load("@gmaven_rules//:defs.bzl", "gmaven_artifact")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
kt_android_library(
    name = "module1022",
    srcs = glob(["src/main/java/**/*.java", "src/main/java/**/*.kt"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1022",
    visibility = ["//visibility:public"],
    deps = [
        "//module460",
        "//module382",
        "//module770",
        "//module345",
        "@maven//:androidx_annotation_annotation_experimental",
        "//module271",
        "//module112",
        "//module66",
        "@maven//:javax_inject_javax_inject",
        "//module736",
        "@maven//:com_squareup_retrofit2_adapter_rxjava",
        "//module25",
        "@maven//:javax_annotation_javax_annotation_api",
        "//module235",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module409",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)