load("@gmaven_rules//:defs.bzl", "gmaven_artifact")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
kt_android_library(
    name = "module1025",
    srcs = glob(["src/main/java/**/*.java", "src/main/java/**/*.kt"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1025",
    visibility = ["//visibility:public"],
    deps = [
        "//module24",
        "//module1073",
        "//module1132",
        "@maven//:androidx_annotation_annotation_experimental",
        "//leafModuleMax",
        "//module319",
        "//module1015",
        "//module835",
        "//module423",
        "//module317",
        "//module1063",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module447",
        "//module1085",
        "//module198",
        "@maven//:com_jakewharton_rxrelay2_rxrelay",
        "@maven//:com_f2prateek_rx_preferences2_rx_preferences",
        "//module472",
        "//module0",
        "//module693",
        "//module324",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module323",
        "//module308",
        "//module106",
        "//module1019",
        "//module862",
        "//module741",
        "//module931",
        "//module888",
        "@maven//:androidx_preference_preference",
        "@maven//:javax_annotation_javax_annotation_api",
        "//module552",
        "//module430",
        "//module1003",
        "@maven//:androidx_appcompat_appcompat_resources",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module547",
        "//module961",
        "//module448",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)