load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1027",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1027",
    visibility = ["//visibility:public"],
    deps = [
        "//module319",
        "//module693",
        "//module1085",
        "@maven//:androidx_core_core_ktx",
        "//leafModuleMax",
        "//module106",
        "@maven//:androidx_fragment_fragment",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module339",
        "@maven//:androidx_legacy_legacy_support_core_ui",
        "//module741",
        "//module528",
        "//module295",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module552",
        "//module835",
        "//module430",
        "@maven//:javax_inject_javax_inject",
        "//module1073",
        "//module213",
        "//module113",
        "@maven//:androidx_appcompat_appcompat_resources",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module42",
        "//module298",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)