load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1028",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1028",
    visibility = ["//visibility:public"],
    deps = [
        "//module524",
        "//module897",
        "//module531",
        "//module1085",
        "//module319",
        "//module888",
        "//module44",
        "//module340",
        "//module927",
        "//module213",
        "//module678",
        "//module1160",
        "//module117",
        "//module1039",
        "//module741",
        "//module308",
        "//module1073",
        "//module518",
        "//module828",
        "//module621",
        "//module909",
        "//module106",
        "//module1208",
        "//module574",
        "//module385",
        "//module693",
        "//module585",
        "//module360",
        "//module430",
        "//module552",
        "//module436",
        "//module175",
        "//module311",
        "//module1003",
        "//module977",
        "//module384",
        "//leafModuleMax",
        "//module388",
        "//module387",
        "//module1187",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module113",
        "//module368",
        "//module30",
        "//module521",
        "//module835",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module404",
        "//module51",
        "//module276",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)