load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1029",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1029",
    visibility = ["//visibility:public"],
    deps = [
        "//module463",
        "//module1073",
        "//module113",
        "//module675",
        "//module1005",
        "//module133",
        "//module298",
        "//module84",
        "//module235",
        "//module547",
        "//module1112",
        "//module893",
        "//module0",
        "//module843",
        "//module741",
        "//module835",
        "//module1015",
        "//module296",
        "//module319",
        "//module447",
        "//module385",
        "//module642",
        "//module106",
        "//module468",
        "//module183",
        "//module888",
        "//module1075",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module862",
        "//leafModuleMax",
        "//module414",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)