load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1030",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1030",
    visibility = ["//visibility:public"],
    deps = [
        "//module308",
        "//module298",
        "@maven//:androidx_annotation_annotation_experimental",
        "//module1085",
        "@maven//:androidx_core_core_ktx",
        "//module183",
        "//module133",
        "//module949",
        "//module213",
        "//module385",
        "//module715",
        "//module693",
        "//module1197",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module496",
        "//module382",
        "//module678",
        "//module202",
        "//module835",
        "//module430",
        "//module388",
        "//leafModuleMax",
        "//module512",
        "//module742",
        "//module1003",
        "//module106",
        "//module1146",
        "//module489",
        "//module524",
        "//module552",
        "//module339",
        "//module410",
        "//module111",
        "@maven//:androidx_fragment_fragment",
        "//module42",
        "//module85",
        "//module345",
        "@maven//:androidx_legacy_legacy_support_core_ui",
        "@maven//:com_jakewharton_rxrelay2_rxrelay",
        "//module409",
        "//module1139",
        "//module350",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module1032",
        "//module235",
        "@maven//:javax_inject_javax_inject",
        "//module741",
        "@maven//:com_jakewharton_rxbinding2_rxbinding_appcompat_v7",
        "//module459",
        "//module319",
        "@maven//:androidx_appcompat_appcompat_resources",
        "//module618",
        "//module284",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module1047",
        "//module976",
        "//module210",
        "//module1073",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)