load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1031",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1031",
    visibility = ["//visibility:public"],
    deps = [
        "//module337",
        "//module957",
        "//module106",
        "@maven//:androidx_annotation_annotation_experimental",
        "//module961",
        "//module828",
        "//module178",
        "//module867",
        "//module888",
        "//module547",
        "@maven//:androidx_core_core_ktx",
        "//module159",
        "//module130",
        "//module0",
        "//module385",
        "//module478",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module862",
        "//module424",
        "//module843",
        "//module1003",
        "//module893",
        "//module648",
        "//module953",
        "@maven//:com_facebook_shimmer_shimmer",
        "//module1185",
        "//module1112",
        "//module1063",
        "//module382",
        "//module719",
        "//module587",
        "//module1054",
        "//leafModuleMax",
        "//module799",
        "//module1015",
        "//module1125",
        "//module1075",
        "//module298",
        "//module765",
        "//module744",
        "//module785",
        "//module539",
        "//module162",
        "//module793",
        "//module457",
        "//module749",
        "//module283",
        "//module468",
        "//module430",
        "//module24",
        "//module714",
        "//module1085",
        "@maven//:androidx_fragment_fragment",
        "//module324",
        "//module776",
        "@maven//:androidx_legacy_legacy_support_core_ui",
        "//module42",
        "//module959",
        "//module65",
        "//module814",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module447",
        "//module257",
        "//module463",
        "@maven//:javax_inject_javax_inject",
        "//module296",
        "@maven//:com_jakewharton_rxbinding2_rxbinding_appcompat_v7",
        "//module943",
        "//module414",
        "//module133",
        "//module84",
        "@maven//:javax_annotation_javax_annotation_api",
        "@maven//:androidx_appcompat_appcompat_resources",
        "//module1066",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module30",
        "//module63",
        "//module100",
        "//module319",
        "//module741",
        "//module386",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)