load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1032",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1032",
    visibility = ["//visibility:public"],
    deps = [
        "//module496",
        "@maven//:androidx_annotation_annotation_experimental",
        "//module964",
        "//module506",
        "@maven//:androidx_core_core_ktx",
        "//module385",
        "//module319",
        "//module1085",
        "//module1190",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module30",
        "//module329",
        "//module1003",
        "//module552",
        "//module476",
        "//module382",
        "//module85",
        "//module678",
        "//module888",
        "//module42",
        "@maven//:com_squareup_retrofit2_adapter_rxjava",
        "//module345",
        "//leafModuleMax",
        "//module693",
        "//module113",
        "//module298",
        "//module1197",
        "//module106",
        "//module63",
        "//module308",
        "//module741",
        "@maven//:androidx_recyclerview_recyclerview",
        "@maven//:androidx_fragment_fragment",
        "//module1072",
        "//module339",
        "@maven//:androidx_legacy_legacy_support_core_ui",
        "@maven//:com_jakewharton_rxrelay2_rxrelay",
        "//module989",
        "//module957",
        "//module213",
        "//module1195",
        "//module828",
        "//module1149",
        "//module430",
        "//module335",
        "//module409",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module164",
        "@maven//:javax_inject_javax_inject",
        "//module183",
        "//module793",
        "//module524",
        "//module1039",
        "//module1054",
        "//module835",
        "//module1073",
        "@maven//:androidx_appcompat_appcompat_resources",
        "//module133",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module176",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)