load("@gmaven_rules//:defs.bzl", "gmaven_artifact")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
kt_android_library(
    name = "module1035",
    srcs = glob(["src/main/java/**/*.java", "src/main/java/**/*.kt"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1035",
    visibility = ["//visibility:public"],
    deps = [
        "//module964",
        "//module997",
        "//module1202",
        "//module307",
        "//module223",
        "//module0",
        "//module893",
        "//module862",
        "//module953",
        "//module1073",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module319",
        "//module1085",
        "//module463",
        "//module385",
        "//module642",
        "//module414",
        "//module1003",
        "//module825",
        "//module604",
        "//module888",
        "//module584",
        "//module957",
        "//module106",
        "//leafModuleMax",
        "//module547",
        "//module843",
        "//module130",
        "//module424",
        "//module345",
        "//module298",
        "//module448",
        "//module183",
        "//module1108",
        "//module324",
        "//module296",
        "//module159",
        "//module31",
        "@maven//:com_jakewharton_rxrelay2_rxrelay",
        "//module430",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module887",
        "//module870",
        "//module30",
        "//module128",
        "//module1015",
        "//module835",
        "//module447",
        "//module468",
        "//module480",
        "@maven//:androidx_appcompat_appcompat_resources",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module1197",
        "//module961",
        "//module724",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)