load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module104",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module104",
    visibility = ["//visibility:public"],
    deps = [
        "//module235",
        "//module977",
        "//module187",
        "//module1012",
        "//module1174",
        "//module409",
        "@maven//:androidx_annotation_annotation_experimental",
        "@maven//:com_facebook_stetho_stetho_okhttp",
        "//module605",
        "//module1077",
        "@maven//:androidx_core_core_ktx",
        "//module1148",
        "//module913",
        "//module339",
        "//module150",
        "//module952",
        "//module463",
        "//module113",
        "//module1184",
        "//module1116",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module794",
        "//module226",
        "//module1176",
        "//module24",
        "//module1115",
        "//module176",
        "//module881",
        "//module1171",
        "//module547",
        "//module414",
        "//module385",
        "//module1073",
        "//module382",
        "//module453",
        "//module634",
        "//module1015",
        "//module959",
        "//module203",
        "//module345",
        "//module1208",
        "//module893",
        "//module995",
        "//module795",
        "//module1152",
        "//module742",
        "//module63",
        "//module642",
        "//module665",
        "//module827",
        "//module489",
        "//module274",
        "//module448",
        "@maven//:androidx_fragment_fragment",
        "//module738",
        "//module298",
        "//module803",
        "//module833",
        "@maven//:androidx_legacy_legacy_support_core_ui",
        "//module756",
        "//leafModuleMax",
        "//module828",
        "//module899",
        "//module435",
        "//module735",
        "//module818",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module106",
        "//module324",
        "@maven//:javax_inject_javax_inject",
        "//module296",
        "//module228",
        "//module472",
        "//module771",
        "//module701",
        "//module940",
        "@maven//:androidx_appcompat_appcompat_resources",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module779",
        "//module95",
        "//module149",
        "//module1081",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)