load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1043",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1043",
    visibility = ["//visibility:public"],
    deps = [
        "//module30",
        "//module213",
        "//module345",
        "//module462",
        "//module1085",
        "//module888",
        "@maven//:androidx_annotation_annotation_experimental",
        "//module183",
        "//module175",
        "//module1039",
        "//module430",
        "//module319",
        "//module574",
        "//module913",
        "//module909",
        "//module835",
        "//module1003",
        "//module1208",
        "//module531",
        "//module671",
        "//module818",
        "//module113",
        "//module475",
        "//module897",
        "//module524",
        "//module181",
        "//module399",
        "//module1073",
        "//module278",
        "//module1197",
        "//module741",
        "//module106",
        "//module518",
        "//module885",
        "//module472",
        "//leafModuleMax",
        "//module693",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module1187",
        "//module552",
        "//module44",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)