load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1049",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1049",
    visibility = ["//visibility:public"],
    deps = [
        "//module337",
        "//module587",
        "//module774",
        "//module593",
        "//module447",
        "//module1185",
        "//module113",
        "//module178",
        "//module324",
        "//module91",
        "//module672",
        "//module296",
        "//module1073",
        "//module909",
        "//module307",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module961",
        "//module468",
        "//leafModuleMax",
        "//module414",
        "//module1094",
        "//module0",
        "@maven//:org_checkerframework_checker_compat_qual",
        "@maven//:com_facebook_shimmer_shimmer",
        "//module385",
        "//module741",
        "//module552",
        "//module463",
        "//module765",
        "//module106",
        "//module888",
        "//module862",
        "//module121",
        "//module159",
        "//module319",
        "//module828",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module24",
        "//module843",
        "//module835",
        "//module547",
        "//module478",
        "//module953",
        "//module430",
        "//module130",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)