load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1055",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1055",
    visibility = ["//visibility:public"],
    deps = [
        "//module835",
        "//module385",
        "//module133",
        "//module1003",
        "@maven//:androidx_annotation_annotation_experimental",
        "//module409",
        "//module1197",
        "//module1171",
        "//module111",
        "@maven//:androidx_core_core_ktx",
        "//module621",
        "//module150",
        "//module430",
        "//leafModuleMax",
        "//module531",
        "//module1073",
        "//module308",
        "//module113",
        "//module462",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module1146",
        "//module345",
        "//module786",
        "//module270",
        "//module744",
        "//module278",
        "//module265",
        "//module175",
        "//module888",
        "//module106",
        "//module486",
        "//module601",
        "//module181",
        "//module1129",
        "//module283",
        "//module976",
        "//module42",
        "//module518",
        "//module897",
        "//module708",
        "//module690",
        "//module215",
        "//module1085",
        "@maven//:com_github_akarnokd_rxjava2_extensions",
        "//module977",
        "//module110",
        "//module1208",
        "//module30",
        "//module818",
        "//module405",
        "//module693",
        "//module24",
        "//module340",
        "//module472",
        "//module339",
        "@maven//:androidx_fragment_fragment",
        "@maven//:androidx_legacy_legacy_support_core_ui",
        "@maven//:com_jakewharton_rxrelay2_rxrelay",
        "//module298",
        "//module213",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module741",
        "@maven//:javax_inject_javax_inject",
        "//module319",
        "//module964",
        "//module552",
        "@maven//:androidx_appcompat_appcompat_resources",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module388",
        "//module524",
        "//module992",
        "//module63",
        "//module382",
        "//module235",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)