load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1065",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1065",
    visibility = ["//visibility:public"],
    deps = [
        "//module183",
        "//module741",
        "//module642",
        "//module468",
        "//module1197",
        "//leafModuleMax",
        "//module414",
        "//module1054",
        "@maven//:androidx_annotation_annotation_experimental",
        "//module424",
        "//module862",
        "//module1005",
        "//module1015",
        "//module547",
        "//module1085",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module106",
        "//module173",
        "//module957",
        "//module430",
        "//module835",
        "//module961",
        "//module692",
        "//module296",
        "//module385",
        "//module113",
        "//module324",
        "//module1063",
        "//module130",
        "//module524",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module530",
        "//module319",
        "//module765",
        "//module811",
        "//module298",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)