load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1066",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1066",
    visibility = ["//visibility:public"],
    deps = [
        "//module1202",
        "//module455",
        "//module84",
        "//module793",
        "//module30",
        "//module386",
        "//leafModuleMax",
        "//module175",
        "//module447",
        "//module832",
        "//module876",
        "//module741",
        "//module1132",
        "//module385",
        "//module1185",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module712",
        "//module1197",
        "//module754",
        "//module1073",
        "//module888",
        "//module106",
        "//module296",
        "//module1111",
        "//module298",
        "//module524",
        "//module128",
        "//module957",
        "//module1092",
        "//module835",
        "//module530",
        "@maven//:com_github_akarnokd_rxjava2_extensions",
        "//module353",
        "//module424",
        "//module862",
        "//module1112",
        "//module67",
        "//module324",
        "//module414",
        "//module468",
        "//module1054",
        "//module584",
        "//module961",
        "//module0",
        "//module448",
        "//module463",
        "@maven//:com_jakewharton_rxrelay2_rxrelay",
        "//module632",
        "//module472",
        "//module1108",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module547",
        "//module893",
        "//module133",
        "//module1181",
        "//module145",
        "//module1005",
        "//module642",
        "//module1015",
        "//module24",
        "//module319",
        "//module430",
        "@maven//:androidx_appcompat_appcompat_resources",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module55",
        "//module648",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)